Fix server details table hover contrast

--- a/src/components/ServerDetailsPage.scss
+++ b/src/components/ServerDetailsPage.scss
@@ -79,6 +79,10 @@
       margin: 0 0 22px 0;
       padding: 12px 16px;
     }
+
+    tr:hover{
+      background-color: var(--bg);
+    }
   }
 }
 
